<resources>
    <string name="app_name">BoarderLogNightMonitoring</string>
    <string name="hit_me">Hit Me!</string>
    <string name="alert">Alert!!!</string>
    <string name="error_no_internet_connection">No internet connection detected. Please check your internet connection!</string>
    <string name="server_error">something wrong with our server. Please try again later.</string>
    <string name="error_timeout">Request timed out. Please check your internet connection!</string>
    <string name="ptr_host">http://google.com</string>
    <string name="destination_hint">Destination</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait...</string>
    <string name="place_details">%1$s, %2$s</string>
    <string name="txt_tittle">Boarder Log Night Monitoring</string>
    <string name="lbl_nim">NIM / Name : </string>
    <string name="lbl_reasonlist">Please choose one of the following reasons :</string>
    <string name="other">Other</string>
    <string name="btn_back">BACK</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_out">OUT</string>
    <string name="btn_in">IN</string>
    <string name="btn_login">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="popTitle">Save Success</string>
    <string name="popReasonTitle">Reason:</string>
    <string name="btn_monitoring">Monitoring</string>
    <string name="btn_sync">Synchronize</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
</resources>
