<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context="id.ac.binus.boarderlognightmonitoring.MonitoringActivity"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/blnm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tittle"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/defaultMargin"
        android:background="@color/bgPrimary">
        <TextView
            android:id="@+id/lblTime"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/defaultMargin"
        android:id="@+id/content"
        android:background="@color/bgPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblNIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nim"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <!--<ScrollView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical"-->
            <!--android:paddingLeft="@dimen/defaultMargin">-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/defaultMargin">

                <TextView
                    android:id="@+id/txtNIM"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:background="@drawable/edittext"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingLeft="4dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/lblReasonList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/lbl_reasonlist"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text_size" />

                <ListView
                    android:id="@+id/listReason"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnBack"
                        android:layout_width="@dimen/btn_width_normal"
                        android:layout_height="@dimen/btn_height_normal"
                        android:layout_alignParentBottom="true"
                        android:background="@color/btnBack"
                        android:layout_marginRight="10sp"
                        android:text="@string/btn_back" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="@dimen/btn_width_normal"
                        android:layout_height="@dimen/btn_height_normal"
                        android:layout_toRightOf="@id/btnBack"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/btn_background"
                        android:text="@string/btn_submit" />
                </LinearLayout>
            </LinearLayout>
        <!--</ScrollView>-->

    </LinearLayout>

</LinearLayout>
