<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index"
    tools:context="id.ac.binus.boarderlognightmonitoring.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="418dp"
        android:layout_height="246dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bglogin">

        <TextView
            android:id="@+id/lblBoarderLogNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="Boarder Log Night Monitoring"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBoarderLogNight"
            android:layout_marginTop="31dp"
            android:layout_toLeftOf="@+id/lblBoarderLogNight"
            android:layout_toStartOf="@+id/lblBoarderLogNight"
            android:text="@string/lbl_username"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lblUsername"
            android:layout_alignRight="@+id/lblUsername"
            android:layout_below="@+id/txtUsername"
            android:layout_marginTop="37dp"
            android:text="@string/lbl_password"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblUsername"
            android:layout_alignBottom="@+id/lblUsername"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblPassword"
            android:layout_alignBottom="@+id/lblPassword"
            android:layout_alignLeft="@+id/txtUsername"
            android:layout_alignStart="@+id/txtUsername"
            android:background="@drawable/edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/btn_width_normal"
            android:layout_height="@dimen/btn_height_normal"
            android:layout_below="@+id/lblPassword"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/defaultMargin"
            android:background="@drawable/btn_background"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
